--- a/pds-netra-backend/pyproject.toml
+++ b/pds-netra-backend/pyproject.toml
@@ -3,6 +3,7 @@ name = "pds-netra-backend"
 version = "0.1.0"
 description = "PDS Netra Central Backend"
 authors = ["PDS Team"]
+packages = [{ include = "app" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -10,10 +11,15 @@ fastapi = "^0.104.0"
 uvicorn = "^0.23.0"
 sqlalchemy = "^2.0.23"
 psycopg2-binary = "^2.9.6"
-pydantic = "^1.10.12"
+pydantic = "^2.7.0"
 pydantic-settings = "^2.2.1"
 python-dotenv = "^1.0.0"
 alembic = "^1.12.0"
+paho-mqtt = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
