--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,11 @@ dist/
 *.sqlite
 *.db
 
+# PDS Netra local media
+pds-netra-backend/data/uploads/
+pds-netra-backend/data/snapshots/
+pds-netra-backend/data/annotated/
+pds-netra-backend/data/edge_overrides/
+
 # Docker
 *.env
