--- a/pds-netra-backend/pyproject.toml
+++ b/pds-netra-backend/pyproject.toml
@@ -16,6 +16,7 @@ pydantic-settings = "^2.2.1"
 python-dotenv = "^1.0.0"
 alembic = "^1.12.0"
 paho-mqtt = "^1.6.1"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
