--- a/pds-netra-edge/config/pds_netra_config.yaml
+++ b/pds-netra-edge/config/pds_netra_config.yaml
@@ -4,14 +4,20 @@ timezone: Asia/Kolkata
 # MQTT connection details. These values can be overridden via environment
 # variables (MQTT_BROKER_HOST, MQTT_BROKER_PORT, MQTT_USERNAME, MQTT_PASSWORD).
 mqtt:
-  host: localhost
+  host: 127.0.0.1
   port: 1883
   username: null
   password: null
 
+tracking:
+  tracker_name: "bytetrack.yaml"
+  track_persist: true
+  conf: 0.25
+  iou: 0.5
+
 cameras:
   - id: CAM_GATE_1
-    rtsp_url: "rtsp://username:password@192.168.1.2:554/stream1"
+    rtsp_url: "rtsp://krishva:krishva1234@192.168.1.2:554/stream1"
     test_video: "./data/gate_1.mp4"
     zones:
       - id: gate_outer
@@ -27,7 +33,7 @@ cameras:
           - [640, 384]
           - [0, 384]
   - id: CAM_AISLE_3
-    rtsp_url: "rtsp://username:password@192.168.1.11:554/stream"
+    rtsp_url: "rtsp://krishva:krishva1234@192.168.1.2:554/stream1"
     test_video: "./data/aisle_3.mp4"
     zones:
       - id: aisle_zone3
@@ -59,13 +65,13 @@ rules:
 
 # Face recognition configuration (optional)
 face_recognition:
-  enabled: false
+  enabled: true
   known_faces_file: "config/known_faces.json"
   min_match_confidence: 0.6
   unknown_event_enabled: true
   dedup_interval_seconds: 60
   cameras:
     - camera_id: CAM_GATE_1
-      zone_id: gate_inner
+      zone_id: all
       allow_unknown: false
-      log_known_only: true
+      log_known_only: false
