--- a/pds-netra-edge/requirements.txt
+++ b/pds-netra-edge/requirements.txt
@@ -5,4 +5,6 @@ ultralytics>=8.0.0
 opencv-python-headless>=4.8.0
 python-dotenv>=1.0.0
 numpy>=1.23.0
-face_recognition>=1.3.0
+insightface>=0.7.3
+faiss-cpu>=1.7.4
+onnxruntime>=1.15.0
