--- a/pds-netra-edge/config/pds_netra_config.yaml
+++ b/pds-netra-edge/config/pds_netra_config.yaml
@@ -18,11 +18,11 @@ tracking:
 cameras:
   - id: CAM_GATE_1
     rtsp_url: "rtsp://krishva:krishva1234@192.168.1.85:554/stream1"
-    test_video: "./data/gate_1.mp4"
+    #test_video: "./data/gate_1.mp4"
 
   - id: CAM_AISLE_3
     rtsp_url: "rtsp://krishva:krishva1234@192.168.1.85:554/stream1"
-    test_video: "./data/aisle_3.mp4"
+    #test_video: "./data/aisle_3.mp4"
     zones:
       - id: aisle_zone3
         polygon:
