--- a/pds-netra-edge/config/pds_netra_config.yaml
+++ b/pds-netra-edge/config/pds_netra_config.yaml
@@ -18,22 +18,23 @@ tracking:
 cameras:
   - id: CAM_GATE_1
     rtsp_url: "rtsp://krishva:krishva1234@192.168.1.85:554/stream1"
-    test_video: "./data/gate_1.mp4"
+    #test_video: "./data/gate_1.mp4"
     health:
       enabled: true
       no_frame_timeout_seconds: 15
       min_fps: 3.0
       low_light_threshold: 25
-      black_frame_threshold: 5.0
+      black_frame_threshold: 10
       low_light_consecutive_frames: 30
-      uniform_std_threshold: 6.0
+      uniform_std_threshold: 8
       blur_threshold: 50.0
       blackout_drop_ratio: 0.55
       blackout_min_baseline: 25.0
       moved_diff_threshold: 0.35
       moved_consecutive_frames: 10
       cooldown_seconds: 60
-      snapshot_on_tamper: false
+      snapshot_on_tamper: true
+      blocked_consecutive_frames: 3
 
   - id: CAM_AISLE_3
     rtsp_url: "rtsp://krishva:krishva1234@192.168.1.85:554/stream1"
@@ -51,7 +52,7 @@ cameras:
       min_fps: 3.0
       low_light_threshold: 25
       black_frame_threshold: 5.0
-      low_light_consecutive_frames: 30
+      low_light_consecutive_frames: 10
       uniform_std_threshold: 6.0
       blur_threshold: 50.0
       blackout_drop_ratio: 0.55
