--- a/pds-netra-edge/.gitignore
+++ b/pds-netra-edge/.gitignore
@@ -27,3 +27,6 @@ runs/
 
 # Ignore runtime cache file
 pds-netra-edge/data/rules_cache.json
+
+data/watchlist/authorized_cache.json    
+data/watchlist/watchlist_cache.json
