--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,52 +1,51 @@
+version: "3.9"
+
 services:
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: pdsnetra
-      POSTGRES_USER: pdsnetra
-      POSTGRES_PASSWORD: STRONGPASS_CHANGE_ME
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U pdsnetra -d pdsnetra"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
+  mosquitto:
+    image: eclipse-mosquitto:2
     restart: unless-stopped
+    ports:
+      - "1883:1883"
+    volumes:
+      - ./deployment/mosquitto/mosquitto.prod.conf:/mosquitto/config/mosquitto.conf:ro
+      - ./deployment/mosquitto/pwfile:/mosquitto/config/pwfile:ro
+      - ./deployment/mosquitto/data:/mosquitto/data
+      - ./deployment/mosquitto/log:/mosquitto/log
 
   backend:
     build:
-      context: ./backend
-    env_file:
-      - ./backend/.env
-    depends_on:
-      postgres:
-        condition: service_healthy
-    expose:
-      - "8000"
+      context: ./pds-netra-backend
+      dockerfile: Dockerfile
     restart: unless-stopped
+    env_file:
+      - ./deployment/env/backend.env
+    depends_on:
+      - mosquitto
+    volumes:
+      - ./deployment/data/backend:/opt/app/data
 
   dashboard:
     build:
-      context: ./dashboard
-    env_file:
-      - ./dashboard/.env
-    depends_on:
-      - backend
-    expose:
-      - "3000"
+      context: ./pds-netra-dashboard
+      dockerfile: Dockerfile
     restart: unless-stopped
-
-  nginx:
-    image: nginx:alpine
+    env_file:
+      - ./deployment/env/dashboard.env
     depends_on:
       - backend
-      - dashboard
+
+  caddy:
+    image: caddy:2
+    restart: unless-stopped
+    env_file:
+      - ./deployment/.env
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    restart: unless-stopped
-
-volumes:
-  pgdata:
+      - ./deployment/caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./deployment/caddy/data:/data
+      - ./deployment/caddy/config:/config
+    depends_on:
+      - dashboard
+      - backend
