--- a/pds-netra-backend/pyproject.toml
+++ b/pds-netra-backend/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^1.0.0"
 alembic = "^1.12.0"
 paho-mqtt = "^1.6.1"
 PyYAML = "^6.0"
+python-multipart = "^0.0.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
