--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   mosquitto:
     image: eclipse-mosquitto:2
@@ -7,8 +5,8 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - ./deployment/mosquitto/mosquitto.prod.conf:/mosquitto/config/mosquitto.conf:ro
-      - ./deployment/mosquitto/pwfile:/mosquitto/config/pwfile:ro
+      - ./deployment/mosquitto/mosquitto.prod.conf:/mosquitto/config/mosquitto.conf
+      - ./deployment/mosquitto/pwfile:/mosquitto/config/pwfile
       - ./deployment/mosquitto/data:/mosquitto/data
       - ./deployment/mosquitto/log:/mosquitto/log
 
