--- a/pds-netra-edge/config/pds_netra_config.yaml
+++ b/pds-netra-edge/config/pds_netra_config.yaml
@@ -21,10 +21,10 @@ anpr:
   enabled: true
   model_path: "./ML_Model/anpr.pt"
   device: "cpu"
-  conf: 0.0
+  conf: 0.35
   iou: 0.45
-  imgsz: 960
-  max_det: 300
+  imgsz: 640
+  max_det: 60
   classes: [0]
   plate_class_names: null
   ocr_lang: ["en"]
@@ -39,6 +39,11 @@ anpr:
   show_invalid: false
   registered_file: null
   dedup_interval_sec: 60
+  gate_line:
+    - [960, 0]
+    - [960, 1080]
+  inside_side: "POSITIVE"
+  direction_max_gap_sec: 120
   # save_crops_dir: "./././anpr_crops"
   # save_crops_max: 15
 
@@ -89,14 +94,14 @@ after_hours_presence:
 
 fire_detection:
   enabled: true
-  model_path: "models/fire.pt"
+  model_path: "models/firedetect-11x.pt"
   device: "cpu"
-  conf: 0.35
+  conf: 0.3
   iou: 0.45
   cooldown_seconds: 60
-  min_frames_confirm: 3
+  min_frames_confirm: 2
   zones_enabled: false
-  interval_sec: 1.5
+  interval_sec: 0.5
   class_keywords: ["fire", "smoke"]
   save_snapshot: true
 
