fix autorized internal server error

--- a/pds-netra-backend/pyproject.toml
+++ b/pds-netra-backend/pyproject.toml
@@ -18,6 +18,8 @@ alembic = "^1.12.0"
 paho-mqtt = "^1.6.1"
 PyYAML = "^6.0"
 python-multipart = "^0.0.9"
+twilio = "^9.0.0"
+requests = "^2.32.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
