--- a/pds-netra-edge/docker/Dockerfile.mac-dev
+++ b/pds-netra-edge/docker/Dockerfile.mac-dev
@@ -2,6 +2,16 @@ FROM python:3.10-slim
 
 WORKDIR /opt/app
 
+# ✅ add this block
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential gcc g++ make \
+    libglib2.0-0 \
+    libgl1 \
+    libxcb1 \
+    libxext6 \
+    libxrender1 \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt ./
 RUN pip install --no-cache-dir --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
