--- a/pds-netra-edge/requirements.txt
+++ b/pds-netra-edge/requirements.txt
@@ -1,13 +1,16 @@
 pydantic>=1.10,<2.0
 PyYAML>=6.0
 paho-mqtt>=1.6.1
-ultralytics>=8.0.0
+ultralytics==8.4.12
 opencv-python-headless>=4.8.0
 python-dotenv>=1.0.0
-numpy>=1.23.0
+numpy==1.26.4
 insightface>=0.7.3
 faiss-cpu>=1.7.4
 onnxruntime>=1.15.0
 fastapi>=0.104.0
 uvicorn>=0.23.0
 python-multipart>=0.0.9
+lap==0.5.12
+polars>=0.20.0
+ultralytics-thop>=2.0.18
