--- a/pds-netra-edge/docker/Dockerfile.jp6
+++ b/pds-netra-edge/docker/Dockerfile.jp6
@@ -1,9 +1,10 @@
 # JetPack 6 / L4T base where OpenCV RTSP works
 FROM dustynv/l4t-pytorch:r36.4.0
+
 ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /app
 COPY . /app
-# System deps: OpenCV (Jetson build), GStreamer, ffmpeg, basics
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-opencv \
     ffmpeg \
@@ -15,23 +16,27 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     gstreamer1.0-plugins-ugly \
     libgl1 \
     libglib2.0-0 \
+    libxcb1 \
     && rm -rf /var/lib/apt/lists/*
-# Python deps (IMPORTANT: keep numpy <2 to avoid torch/numpy issues)
-# Force PyPI (ignore Jetson pip config inside base image)
+
 ENV PIP_INDEX_URL=https://pypi.org/simple
 ENV PIP_EXTRA_INDEX_URL=
 ENV PIP_NO_CACHE_DIR=1
-RUN python3 -m pip install -U pip setuptools wheel && \
-    python3 -m pip install "numpy<2" && \
-    python3 -m pip install \
+
+RUN printf "numpy<2\n" > /tmp/constraints.txt && \
+    python3 -m pip install -U pip setuptools wheel && \
+    python3 -m pip uninstall -y numpy && \
+    python3 -m pip install -c /tmp/constraints.txt "numpy<2" && \
+    python3 -m pip install -c /tmp/constraints.txt \
       pydantic==1.10.13 \
       python-dotenv==1.0.1 \
       paho-mqtt==1.6.1 \
       PyYAML==6.0.1 \
       pillow tqdm psutil matplotlib scipy py-cpuinfo && \
-    python3 -m pip install ultralytics==8.4.12 --no-deps && \
-    python3 -m pip install lap==0.5.12
-# Sanity print OpenCV backend
+    python3 -m pip install -c /tmp/constraints.txt ultralytics==8.4.12 --no-deps && \
+    python3 -m pip install -c /tmp/constraints.txt lap==0.5.12 && \
+    python3 -m pip install -c /tmp/constraints.txt insightface==0.7.3 faiss-cpu==1.7.4 onnxruntime==1.16.3
+
 RUN python3 - <<'PY'
 import cv2
 print("cv2:", cv2.__version__)
@@ -39,4 +44,5 @@ print("cv2 file:", cv2.__file__)
 print("FFMPEG:", "FFMPEG: YES" in cv2.getBuildInformation())
 print("GStreamer:", "GStreamer" in cv2.getBuildInformation())
 PY
-CMD ["python3", "-m", "app.main", "--config", "config/jetson.yaml", "--device", "cuda"]
+
+CMD ["python3", "-m", "app.main", "--config", "config/pds_netra_config.yaml", "--device", "cuda"]
