Shruti Add Sirun

--- a/deployment/edge/env/edge.env.example
+++ b/deployment/edge/env/edge.env.example
@@ -25,3 +25,11 @@ EDGE_WATCHDOG_INTERVAL_SEC=5
 EDGE_WATCHDOG_CAMERA_STALL_SEC=45
 EDGE_WATCHDOG_FATAL_SEC=180
 EDGE_WATCHDOG_HEARTBEAT_PATH=/opt/app/data/edge_health.json
+
+# Speaker / siren
+EDGE_SPEAKER_DEVICE=hw:2,0
+EDGE_SIREN_FILE=/opt/app/config/siren_16bit.wav
+EDGE_SIREN_ENABLED=true
+EDGE_SIREN_COOLDOWN_SEC=60
+EDGE_SIREN_DURATION_SEC=10
+EDGE_SIREN_EVENT_TYPES=AFTER_HOURS_PERSON_DETECTED,PERSON_INTRUSION,FIRE_DETECTED,WATCHLIST_MATCH
