final: gitignore fix, resolve autosave, keep edge override and prod configs

--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,10 @@ pds-netra-edge/cache/
 # ----------------------------
 # Deployment runtime data (DO NOT COMMIT)
 # ----------------------------
-deployment/data/
+deployment/data/backend/uploads/
+deployment/data/backend/snapshots/
+deployment/data/backend/live/
+deployment/data/backend/watchlist/
 deployment/caddy/data/
 deployment/caddy/config/caddy/autosave.json
 
