--- a/deployment/caddy/Caddyfile
+++ b/deployment/caddy/Caddyfile
@@ -1,7 +1,7 @@
 {$CADDY_DOMAIN} {
     encode gzip
 
-    reverse_proxy /api/* backend:8001
+    reverse_proxy /api/* dashboard:3000
     reverse_proxy /media/* backend:8001
 
     reverse_proxy /* dashboard:3000
