--- a/pds-netra-dashboard/Dockerfile
+++ b/pds-netra-dashboard/Dockerfile
@@ -8,6 +8,15 @@ WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED=1
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+ARG NEXT_PUBLIC_API_BASE_URL
+ARG NEXT_PUBLIC_MOCK_MODE
+ARG NEXT_PUBLIC_ALERTS_WS_URL
+
+ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL \
+    NEXT_PUBLIC_MOCK_MODE=$NEXT_PUBLIC_MOCK_MODE \
+    NEXT_PUBLIC_ALERTS_WS_URL=$NEXT_PUBLIC_ALERTS_WS_URL
+
 RUN npm run build
 
 FROM node:20-alpine AS runner
