--- a/pds-netra-backend/alembic.ini
+++ b/pds-netra-backend/alembic.ini
@@ -86,7 +86,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+psycopg2://pdsnetra:pdsnetra@127.0.0.1:55432/pdsnetra
+
 
 
 [post_write_hooks]
