--- a/pds-netra-edge/docker-compose.yml
+++ b/pds-netra-edge/docker-compose.yml
@@ -13,11 +13,16 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.mac-dev
+    env_file:
+      - ./.env
     environment:
-      # Override MQTT broker host to point at the mosquitto service in the compose network
-      - MQTT_BROKER_HOST=mosquitto
-      # Set to match backend PDS_AUTH_TOKEN when auth is enabled
+      - GODOWN_ID=${GODOWN_ID}
+      - EDGE_TIMEZONE=${EDGE_TIMEZONE}
+      - EDGE_BACKEND_URL=${EDGE_BACKEND_URL}
       - EDGE_BACKEND_TOKEN=${EDGE_BACKEND_TOKEN}
+      - EDGE_RULES_SOURCE=${EDGE_RULES_SOURCE}
+      - EDGE_CAMERAS_SOURCE=${EDGE_CAMERAS_SOURCE}
+      - MQTT_BROKER_HOST=mosquitto
       - YOLO_CONFIG_DIR=/opt/app/.config/Ultralytics
       - INSIGHTFACE_HOME=/opt/app/.insightface
     volumes:
