--- a/pds-netra-edge/docker/Dockerfile.jp6
+++ b/pds-netra-edge/docker/Dockerfile.jp6
@@ -26,6 +26,7 @@ ENV PIP_NO_CACHE_DIR=1
 RUN printf "numpy<2\n" > /tmp/constraints.txt && \
     python3 -m pip install -U pip setuptools wheel && \
     python3 -m pip uninstall -y numpy && \
+    python3 -m pip uninstall -y paddlepaddle paddlepaddle-gpu paddleocr || true && \
     python3 -m pip install -c /tmp/constraints.txt "numpy<2" && \
     python3 -m pip install -c /tmp/constraints.txt \
       pydantic==1.10.13 \
@@ -35,7 +36,9 @@ RUN printf "numpy<2\n" > /tmp/constraints.txt && \
       pillow tqdm psutil matplotlib scipy py-cpuinfo && \
     python3 -m pip install -c /tmp/constraints.txt ultralytics==8.4.12 --no-deps && \
     python3 -m pip install -c /tmp/constraints.txt lap==0.5.12 && \
-    python3 -m pip install -c /tmp/constraints.txt insightface==0.7.3 faiss-cpu==1.7.4 onnxruntime==1.16.3 paddleocr paddlepaddle
+    python3 -m pip install -c /tmp/constraints.txt \
+        insightface==0.7.3 faiss-cpu==1.7.4 onnxruntime==1.16.3 \
+        paddleocr==2.7.3 paddlepaddle==2.6.2
 
 RUN python3 - <<'PY'
 import cv2
