--- a/pds-netra-edge/config/pds_netra_config.yaml
+++ b/pds-netra-edge/config/pds_netra_config.yaml
@@ -93,7 +93,7 @@ after_hours_presence:
 
 fire_detection:
   enabled: true
-  model_path: "models/firedetect-11x.pt"
+  model_path: "models/fire.pt"
   device: "cuda"
   conf: 0.3
   iou: 0.45
