--- a/pds-netra-edge/docker/Dockerfile.jp6
+++ b/pds-netra-edge/docker/Dockerfile.jp6
@@ -48,4 +48,4 @@ print("FFMPEG:", "FFMPEG: YES" in cv2.getBuildInformation())
 print("GStreamer:", "GStreamer" in cv2.getBuildInformation())
 PY
 
-CMD ["python3", "-m", "app.main", "--config", "config/pds_netra_config.yaml", "--device", "cuda"]
+CMD ["python3", "-m", "app.main", "--config", "config/pds_netra_config.yaml", "--device", "cuda:0"]
