--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,6 +24,18 @@ services:
       - /data/pds-live:/data/pds-live
     command: ["sh", "-c", "python -m alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8001"]
 
+  backend-worker:
+    build:
+      context: ./pds-netra-backend
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    env_file:
+      - ./deployment/env/backend.env
+    depends_on:
+      - mosquitto
+      - backend
+    command: ["python", "-m", "app.worker"]
+
   dashboard:
     build:
       context: ./pds-netra-dashboard
