--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,7 @@ services:
       - ./deployment/env/backend.env
     depends_on:
       - mosquitto
+      - embedding
     volumes:
       - ./deployment/data/backend:/opt/app/data
       - /data/pds-live:/data/pds-live
@@ -34,10 +35,18 @@ services:
     depends_on:
       - backend
       - mosquitto
+      - embedding
     volumes:
       - ./deployment/data/backend:/opt/app/data
       - /data/pds-live:/data/pds-live
     command: ["python", "-m", "app.worker"]
+
+  embedding:
+    build:
+      context: ./pds-netra-edge
+      dockerfile: docker/Dockerfile.embedding.cpu
+    restart: unless-stopped
+    command: ["uvicorn", "app.embedding_api:app", "--host", "0.0.0.0", "--port", "19000"]
 
   dashboard:
     build:
