--- a/pds-netra-edge/docker/Dockerfile.embedding.cpu
+++ b/pds-netra-edge/docker/Dockerfile.embedding.cpu
@@ -5,18 +5,11 @@ ENV PYTHONUNBUFFERED=1 \
 
 WORKDIR /opt/app
 
-# System deps:
-# - build-essential: gcc/g++/make (required to build insightface)
-# - libgl1, libglib2.0-0, libgomp1: required by opencv/onnxruntime
+# Needed to build insightface + run cv2/onnxruntime
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
-    g++ \
-    gcc \
-    make \
-    pkg-config \
-    libgl1 \
-    libglib2.0-0 \
-    libgomp1 \
+    gcc g++ make pkg-config \
+    libgl1 libglib2.0-0 libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
 COPY . .
